Update start-high-RAM.sh