@@ -34,7 +34,7 @@ fi
 # Comment out for bigger systems, e.g. non-routers
 # or when API documentation is enabled
 # Uncomment (remove '#' sign) line below if your system has less than 12GB of RAM for optimal RAM defaults
-JVM_MEMORY_ARGS="-Xss1024m -Xmx8128m -XX:MaxRAM=8172m -XX:+UseSerialGC"
+JVM_MEMORY_ARGS="-XX:MaxRAMPercentage=40 -XX:+UseG1GC -Xss512k -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=./heapdump.hprof -Xlog:gc*:file=gc.log:time,uptime,level,tags"
 
 # Although java.net.preferIPv4Stack is supposed to be false
 # by default in Java 11, on some platforms (e.g. FreeBSD 12),
